--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Christmas Party Invite</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     * {
       box-sizing: border-box;
@@ -10,7 +11,7 @@
 
     body {
       margin: 0;
-      background: #000; /* 바깥 여백은 검정 */
+      background: #000;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -19,13 +20,12 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
     }
 
-    /* 이미지 카드 전체를 담는 박스 (세로형 비율) */
+    /* 아이폰 화면을 꽉 채우도록 수정 */
     .container {
       position: relative;
-      width: min(420px, 100vw);       /* 가로 최대 420px, 모바일에서 꽉 차게 */
-      aspect-ratio: 9 / 16;           /* 9:16 비율 (세로 길쭉) */
+      width: 100vw;
+      height: 100vh;
       overflow: hidden;
-      border-radius: 0;
     }
 
     .layer {
@@ -38,7 +38,7 @@
       transition: opacity 1.2s ease-in-out;
     }
 
-    /* 1번 이미지는 로드되면서 밑에서 위로 1초간 페이드인 */
+    /* 1번 이미지는 밑에서 위로 1초간 페이드인 */
     #img1 {
       animation: fadeUp 1s ease-out forwards;
     }
@@ -54,34 +54,31 @@
       }
     }
 
-    /* 2,3번 이미지는 기본은 안 보임. JS로 opacity만 1로 바꿔서 페이드인 */
     #img2,
     #img3 {
       opacity: 0;
     }
 
-    /* CLICK HERE 버튼이 있는 부분을 덮는 투명 클릭 영역 */
+    /* 2번 이미지의 CLICK HERE 부분을 덮는 클릭 영역 (크게 확장) */
     #clickArea {
       position: absolute;
-
-      /* ▼ 위치 조절하는 부분 (2번 이미지 기준) ▼ */
-      left: 50%;          /* 가로 중앙 */
-      top: 57%;           /* 세로 위치 (대략 버튼 중앙쯤) */
+      left: 50%;
+      top: 56%;          /* 버튼 중앙쯤 */
       transform: translate(-50%, -50%);
-      width: 65%;         /* 버튼 폭보다 살짝 넓게 */
-      height: 11%;        /* 버튼 높이와 비슷하게 */
+      width: 80%;        /* 가로 넉넉하게 */
+      height: 16%;       /* 세로도 넉넉하게 */
 
       cursor: pointer;
       background: transparent;
       border: none;
       padding: 0;
-      display: none;      /* 처음엔 숨겨두고 2번 이미지가 뜨면 보여줌 */
+      display: none;
       z-index: 10;
     }
 
-    /* 클릭 영역이 어디인지 보고 싶으면 이 주석 풀어서 확인!
+    /* 클릭 범위 확인하고 싶으면 아래 주석 풀어서 한 번 봐도 돼!
     #clickArea {
-      background: rgba(255, 0, 0, 0.2);
+      background: rgba(255, 0, 0, 0.25);
     }
     */
   </style>
@@ -97,7 +94,7 @@
     <!-- 3번 이미지 -->
     <img id="img3" class="layer" src="card3.png" alt="크리스마스 타임테이블" />
 
-    <!-- 2번 이미지의 CLICK HERE 부분을 덮는 투명 버튼 -->
+    <!-- 2번 이미지 CLICK HERE 영역 -->
     <button id="clickArea" aria-label="상세 일정 보기"></button>
   </div>
 
@@ -107,18 +104,16 @@
       const img3 = document.getElementById("img3");
       const clickArea = document.getElementById("clickArea");
 
-      // 1) 페이지 열리면 img1은 CSS 애니메이션으로 1초 동안 아래 → 위 페이드인
-
-      // 2) 3초 뒤에 2번 이미지가 부드럽게 페이드인
+      // 2) 1.5초 뒤에 2번 이미지 페이드인 (원래 3000ms → 1500ms)
       setTimeout(() => {
         img2.style.opacity = 1;
-        clickArea.style.display = "block"; // 클릭 영역 활성화
-      }, 3000);
+        clickArea.style.display = "block";
+      }, 1500);
 
-      // 3) CLICK HERE 영역 클릭 시 3번 이미지로 자연스럽게 전환
+      // 3) CLICK HERE 클릭 → 3번 이미지 페이드인
       clickArea.addEventListener("click", () => {
-        img3.style.opacity = 1;      // 3번 이미지 페이드인
-        clickArea.style.display = "none"; // 더 이상 클릭 못하게 숨김 (선택사항)
+        img3.style.opacity = 1;
+        clickArea.style.display = "none";
       });
     });
   </script>
